src/objects/Product__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <description>For test test</description>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>