src/objects/Product__c/fields/metadatCheck__c.field-meta.xml
<CustomField>
    <fullName>metadatCheck__c</fullName>
    <description>Test Rule</description>
    <label>metadatCheck</label>
    <length>23</length>
    <type>Text</type>
</CustomField>