src/objects/Product__c/fields/SBQQ_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_ErrorMessage__c</fullName>
    <description>ErrorMessageErrorMessageErrorMessageErrorMessageErrorMessageErrorMessageErrorMessageErrorMessageErrorMessageErrorMessage</description>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>