src/objects/Product__c/fields/TexboxTest__c.field-meta.xml
<CustomField>
    <fullName>TexboxTest__c</fullName>
    <description>For test</description>
    <label>TexboxTest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>