src/objects/Product__c/recordTypes/record_type_27_Jan.recordType-meta.xml
<RecordType>
    <fullName>record_type_27_Jan</fullName>
    <active>true</active>
    <label>record_type_27_Jan</label>
</RecordType>