src/objects/Product__c/recordTypes/record_type_27_Jan1.recordType-meta.xml
<RecordType>
    <fullName>record_type_27_Jan1</fullName>
    <active>true</active>
    <label>record_type_27_Jan1</label>
</RecordType>